--- a/index/style.css
+++ b/index/style.css
@@ -10,16 +10,19 @@ body {
 	background-size: cover;
 }
 section {
-	position: relative;
-	width: 100%;
+	/*position: relative;*/
+	/*width: 100%;*/
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	height: 100vh;
 	transform-style: preserve-3d;
 	perspective: 500px;
 }
 section h2 {
-	position: relative;
-	width: 100%;
-	height: 100vh;
+	/* position: relative;*/
+	width: 50%;
+	/*height: 100vh;*/
 	text-align: center;
 	line-height: 5vh;
 	font-size: 3vw;
@@ -46,17 +49,43 @@ section h2 {
 }
 @keyframes animate {
 	0% {
-			transform: translateZ(2000px);
-			background: url(img/10991.jpg);
-			background-position: center;
-			background-attachment: fixed;
-			background-size: cover;
+		transform: translateZ(2000px);
+		background: url(img/10991.jpg);
+		background-position: center;
+		background-attachment: fixed;
+		background-size: cover;
 	}
 	100% {
-			transform: translateZ(0px);
-			background: url(img/10991.jpg);
-			background-position: center;
-			background-attachment: fixed;
-			background-size: cover;
+		transform: translateZ(0px);
+		background: url(img/10991.jpg);
+		background-position: center;
+		background-attachment: fixed;
+		background-size: cover;
+	}
+}
+
+section.active .banner .blocks
+{
+	animation: animateTwo 2s ease-in-out forwards;
+	background: url(img/10991.jpg);
+	background-position: center;
+	background-attachment: fixed;
+	background-size: cover;
+}
+
+@keyframes animateTwo {
+	0% {
+		transform: translateZ(0px);
+		background: url(img/10991.jpg);
+		background-position: center;
+		background-attachment: fixed;
+		background-size: cover;
+	}
+	100% {
+		transform: translateZ(2000px);
+		background: url(img/10991.jpg);
+		background-position: center;
+		background-attachment: fixed;
+		background-size: cover;
 	}
 }
